--- a/index.html
+++ b/index.html
@@ -2,40 +2,41 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<script type="text/javascript" href="script.js"></script>
+		
 		<title>Calculator</title>
 	</head>
 	<body>
 		<header class="calc-heading"><h1 class="calc-title">JS Calculator</h1></header>
 		<main class="calc-body">
-			<div class="screen">0</div>
+			<div class="screen"><l class="output">0<l></div>
 			<div class="top-buttons">
-				<div class="clear">C</div>
-				<div class="back"><-</div>
-				<div class="operation">%</div>
+				<div class="clear topbtn calcbutton">C</div>
+				<div class="back topbtn calcbutton"><-</div>
+				<div class="operation calcbutton">%</div>
 			</div>
 			<div class="middle-buttons">
-				<div class="numpad">7</div>
-				<div class="numpad">8</div>
-				<div class="numpad">9</div>
-				<div class="operation">*</div>
+				<div class="numpad calcbutton">7</div>
+				<div class="numpad calcbutton">8</div>
+				<div class="numpad calcbutton">9</div>
+				<div class="operation calcbutton">*</div>
 			</div>
 			<div class="lower">
-				<div class="numpad">4</div>
-				<div class="numpad">5</div>
-				<div class="numpad">6</div>
-				<div class="operation">-</div>
+				<div class="numpad calcbutton">4</div>
+				<div class="numpad calcbutton">5</div>
+				<div class="numpad calcbutton">6</div>
+				<div class="operation calcbutton">-</div>
 			</div>
 			<div class="one-to-three">
-				<div class="numpad">1</div>
-				<div class="numpad">2</div>
-				<div class="numpad">3</div>
-				<div class="operation">+</div>
+				<div class="numpad calcbutton">1</div>
+				<div class="numpad calcbutton">2</div>
+				<div class="numpad calcbutton">3</div>
+				<div class="operation calcbutton">+</div>
 			</div>
 			<div class="zero-line">
-				<div class="zero">0</div>
-				<div class="operation">=</div>
+				<div class="zero calcbutton">0</div>
+				<div class="operation calcbutton">=</div>
 			</div>
 		</main>
+		<script type="text/javascript" href="script.js"></script>
 	</body>
 </html>
