--- a/index.html
+++ b/index.html
@@ -8,35 +8,35 @@
 	<body>
 		<header class="calc-heading"><h1 class="calc-title">JS Calculator</h1></header>
 		<main class="calc-body">
-			<div class="screen"><l class="output">0<l></div>
+			<div class="screen"><l id="output"><l></div>
 			<div class="top-buttons">
-				<div class="clear topbtn calcbutton">C</div>
-				<div class="back topbtn calcbutton"><-</div>
+				<div class="clear topbtn calcbutton" id="btnc">C</div>
+				<div class="back topbtn calcbutton" id="btnb"><-</div>
 				<div class="operation calcbutton">%</div>
 			</div>
 			<div class="middle-buttons">
-				<div class="numpad calcbutton">7</div>
-				<div class="numpad calcbutton">8</div>
-				<div class="numpad calcbutton">9</div>
+				<div class="numpad calcbutton" id="btn7">7</div>
+				<div class="numpad calcbutton" id="btn8">8</div>
+				<div class="numpad calcbutton" id="btn9">9</div>
 				<div class="operation calcbutton">*</div>
 			</div>
 			<div class="lower">
-				<div class="numpad calcbutton">4</div>
-				<div class="numpad calcbutton">5</div>
-				<div class="numpad calcbutton">6</div>
+				<div class="numpad calcbutton" id="btn4">4</div>
+				<div class="numpad calcbutton" id="btn5">5</div>
+				<div class="numpad calcbutton" id="btn6">6</div>
 				<div class="operation calcbutton">-</div>
 			</div>
 			<div class="one-to-three">
-				<div class="numpad calcbutton">1</div>
-				<div class="numpad calcbutton">2</div>
-				<div class="numpad calcbutton">3</div>
+				<div class="numpad calcbutton" id="btn1">1</div>
+				<div class="numpad calcbutton" id="btn2">2</div>
+				<div class="numpad calcbutton" id="btn3">3</div>
 				<div class="operation calcbutton">+</div>
 			</div>
 			<div class="zero-line">
-				<div class="zero calcbutton">0</div>
+				<div class="zero calcbutton" id="btn0">0</div>
 				<div class="operation calcbutton">=</div>
 			</div>
 		</main>
-		<script type="text/javascript" href="script.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
 </html>
