--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
 			<div class="top-buttons">
 				<div class="clear topbtn calcbutton" id="btnc">C</div>
 				<div class="back topbtn calcbutton" id="btnb"><-</div>
-				<div class="operation calcbutton">%</div>
+				<div class="operation calcbutton" id="btnDiv">/</div>
 			</div>
 			<div class="middle-buttons">
 				<div class="numpad calcbutton" id="btn7">7</div>
 				<div class="numpad calcbutton" id="btn8">8</div>
 				<div class="numpad calcbutton" id="btn9">9</div>
-				<div class="operation calcbutton">*</div>
+				<div class="operation calcbutton" id="btnMulti">*</div>
 			</div>
 			<div class="lower">
 				<div class="numpad calcbutton" id="btn4">4</div>
 				<div class="numpad calcbutton" id="btn5">5</div>
 				<div class="numpad calcbutton" id="btn6">6</div>
-				<div class="operation calcbutton">-</div>
+				<div class="operation calcbutton" id="btnMinus">-</div>
 			</div>
 			<div class="one-to-three">
 				<div class="numpad calcbutton" id="btn1">1</div>
 				<div class="numpad calcbutton" id="btn2">2</div>
 				<div class="numpad calcbutton" id="btn3">3</div>
-				<div class="operation calcbutton">+</div>
+				<div class="operation calcbutton" id="btnPlus">+</div>
 			</div>
 			<div class="zero-line">
 				<div class="zero calcbutton" id="btn0">0</div>
-				<div class="operation calcbutton">=</div>
+				<div class="operation calcbutton" id="btnEquals">=</div>
 			</div>
 		</main>
 		<script type="text/javascript" src="script.js"></script>
